[package]
name = "VoiceModifier2"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.13"
dasp = { version = "0.11.0", features = ["signal"] }
portaudio = "0.7.0"
rustfft = "6.2.0"
serde_json = "1.0.127"
socketioxide = { version = "0.10.0", features = ["state"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tower = "0.4.13"
serde = { version = "1.0.195", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [] }
axum = "0.7.4"
http = "1.0.0"
time = "0.3.36"
